fix wrap recommendations

--- a/main_dark.css
+++ b/main_dark.css
@@ -376,7 +376,7 @@ video {
 
 #recomended_gifs {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: center;
   margin: 2rem 0;
 }
