--- a/styles/_ids.scss
+++ b/styles/_ids.scss
@@ -11,7 +11,7 @@
 
 #recomended_gifs {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: center;
   margin: 2rem 0;
 }
